@@ -21,6 +21,7 @@
 - Cleaned up image loading code
 - Refactored beaming code so that smarter beaming becomes possible
 - Fixed triplets beaming with non-triplets
+- Improved scons build system
 
  1.1b5
 - note beams
